# commitgen

./: CHANGELOG.md  README.md  pyproject.toml
cmd/: config.go  config_test.go  pr.go  root.go
internal/config/: config.go  config_test.go
internal/generator/: generator.go  generator_test.go  pr.go
internal/prompts/: en.md  pr_en.md  pr_pt_br.md  prompt.go  pt_br.md
internal/updatecheck/: updatecheck.go  updatecheck_test.go
